Modified the Makefile to compile octeon specific code changes.
Signed-off-by: Anagha K J <aj@marvell.com>

Orabug: 36725623

Signed-off-by: Dave Kleikamp <dave.kleikamp@oracle.com>
Reviewed-by: Vijay Kumar <vijay.ac.kumar@oracle.com>
Signed-off-by: Brian Maly <brian.maly@oracle.com>

--- a/arch/mips/cavium-octeon/Makefile
+++ b/arch/mips/cavium-octeon/Makefile
@@ -9,13 +9,36 @@
 # Copyright (C) 2005-2009 Cavium Networks
 #
 
-obj-y := cpu.o setup.o octeon-platform.o octeon-irq.o csrc-octeon.o
+obj-y := setup.o octeon-platform.o octeon-irq.o csrc-octeon.o \
+		octeon-hw-status.o octeon_info.o cavium.o
 obj-y += dma-octeon.o
+obj-y += csrc-octeon-ptp.o
+obj-y += octeon-pci-console.o
+obj-y += perf_counters.o
 obj-y += octeon-memcpy.o
 obj-y += executive/
 obj-y += crypto/
 
 obj-$(CONFIG_MTD)		      += flash_setup.o
 obj-$(CONFIG_SMP)		      += smp.o
+obj-$(CONFIG_NUMA)			+= octeon-numa.o
+obj-$(CONFIG_NUMA)			+= csrc-fpa-clk.o
 obj-$(CONFIG_OCTEON_ILM)	      += oct_ilm.o
 obj-$(CONFIG_USB)		      += octeon-usb.o
+obj-$(CONFIG_CAVIUM_OCTEON_NAND)	+= octeon-nand.o
+obj-$(CONFIG_SYSFS)                   += octeon-power-throttle.o
+obj-$(CONFIG_OCTEON_ERROR_INJECTOR)	+= octeon-error-injector.o
+obj-$(CONFIG_CAVIUM_OCTEON_RAPIDIO)	+= octeon-rapidio.o
+obj-$(CONFIG_CAVIUM_OCTEON_ERROR_TREE)	+= octeon-error-tree.o octeon-78xx-errors.o \
+	octeon-73xx-errors.o octeon-7xxx-errors.o octeon-75xx-errors.o
+obj-$(CONFIG_OCTEON_FPA3)		+= octeon-fpa3.o
+obj-$(CONFIG_CAVIUM_PCIE_RESET)		+= pcie_reset.o
+obj-$(CONFIG_USB)		      += octeon-usb.o
+
+ifdef CONFIG_SMP
+ifdef CONFIG_SYSFS
+ifdef CONFIG_HOTPLUG_CPU
+obj-y += unplug-cpu.o unplug-cpu-ll.o
+endif
+endif
+endif
