--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -1691,11 +1691,10 @@ config TXX9_WDT
 	  Hardware driver for the built-in watchdog timer on TXx9 MIPS SoCs.
 
 config OCTEON_WDT
-	tristate "Cavium OCTEON SOC family Watchdog Timer"
+	bool "Cavium OCTEON SOC family Watchdog Timer"
 	depends on CAVIUM_OCTEON_SOC
 	default y
 	select WATCHDOG_CORE
-	select EXPORT_UASM if OCTEON_WDT = m
 	help
 	  Hardware driver for OCTEON's on chip watchdog timer.
 	  Enables the watchdog for all cores running Linux. It
